src/test/ui/borrowck/borrowck-uninit.stderr
error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-uninit.rs:15:9
   |
LL |     foo(x); //~ ERROR use of possibly uninitialized variable: `x`
   |         ^ use of possibly uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
